# Voltra-Engine

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.agent/rules/: voltra-engine.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
assets/scenes/: Example.voltra
src/: Voltra.hpp  main.cpp
src/Core/: Application.cpp  Application.hpp  Core.hpp  Input.cpp  Input.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Timestep.hpp  UUID.cpp  UUID.hpp  Window.cpp  Window.hpp
src/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
src/Renderer/: AssetManager.cpp  AssetManager.hpp  Buffer.cpp  Buffer.hpp  EditorCamera.cpp  EditorCamera.hpp  Framebuffer.cpp  Framebuffer.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  VertexArray.cpp  VertexArray.hpp
src/Sandbox/: EditorLayer.cpp  EditorLayer.hpp  ExampleLayer.cpp  ExampleLayer.hpp  SandboxApp.cpp
src/Scene/: Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp  ScriptableEntity.hpp
tests/: AssetManagerTest.cpp  BufferTest.cpp  ECSTest.cpp  EventTest.cpp  LayerStackTest.cpp  SceneSerializerTest.cpp  TextureManagerTest.cpp  TextureTest.cpp  TimestepTest.cpp  UUIDTest.cpp  main_test.cpp
